--- a/admin-public-menu.html
+++ b/admin-public-menu.html
@@ -1,4 +1,4 @@
-<!-- ===== 管理：公開メニュー管理 (env.js＋認証チェック対応) ===== -->
+<!-- ===== 管理：公開メニュー管理 ===== -->
 <div id="menu-admin-root">
   <h2>メニュー管理</h2>
 
